deps/v8/test/message/fail/call-primitive-constructor.js
// Copyright 2016 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

var non_callable = 0;
new non_callable();
